[project]
name = "NaughtsCrosses"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rykarix", email = "8267553+Rykarix@users.noreply.github.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
